updated paper for first round of review

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -108,7 +108,7 @@ Hanson Center for Space Sciences, University of Texas at Dallas, Richardson, TX 
 %\conference{} % An extended version of a conference paper
 
 % Abstract (Do not insert blank lines, i.e. \\) 
-\abstract{We introduce a new model for non-linear endmember extraction and spectral unmixing of hyperspectral imagery called Generative Simplex Mapping (GSM). The model represents endmember mixing using a latent space of points sampled within a $(n-1)$-simplex corresponding to $n$ unique sources. Barycentric coordinates within this simplex are naturally interpreted as relative endemember abundances satisfying both the abundance sum-to-one and abundance non-negativity constraints. Points in this latent space are mapped to reflectance spectra via a flexible function combining linear and non-linear mixing. Due to the probabilistic formulation of the GSM, spectral variability is also estimated by a precision parameter describing the distribution of observed spectra. Model parameters are determined using a generalized expectation-maximization algorithm which guarantees non-negativity for extracted endmembers. We first compare the GSM against three varieties of nonnegative matrix factorization (NMF) on a sythetic dataset of linearly mixed spectra from the USGS spectral database. Here the GSM performed favorably for both endmember accacy and abundance estimation with the all non-linear contributions driven to zero by the fitting procedure. In a second experiment, we apply the GTM to model non-linear mixing in real hyperspectral imagery captured over a pond in North Texas. The model accurately identified spectral signatures corresponding to near-shore algae, water, and rhodmaine tracer dye introduced into the pond to simulate water contamination by a localized source. Abundance maps generated using the GSM accurately track the evolution of the dye plume as it mixes into the surrounding water.}
+\abstract{We introduce a new model for non-linear endmember extraction and spectral unmixing of hyperspectral imagery called Generative Simplex Mapping (GSM). The model represents endmember mixing using a latent space of points sampled within a $(n-1)$-simplex corresponding to $n$ unique sources. Barycentric coordinates within this simplex are naturally interpreted as relative endemember abundances satisfying both the abundance sum-to-one and abundance non-negativity constraints. Points in this latent space are mapped to reflectance spectra via a flexible function combining linear and non-linear mixing. Due to the probabilistic formulation of the GSM, spectral variability is also estimated by a precision parameter describing the distribution of observed spectra. Model parameters are determined using a generalized expectation-maximization algorithm which guarantees non-negativity for extracted endmembers. We first compare the GSM against three varieties of nonnegative matrix factorization (NMF) on a sythetic dataset of linearly mixed spectra from the USGS spectral database. Here the GSM performed favorably for both endmember accacy and abundance estimation with all non-linear contributions driven to zero by the fitting procedure. In a second experiment, we apply the GTM to model non-linear mixing in real hyperspectral imagery captured over a pond in North Texas. The model accurately identified spectral signatures corresponding to near-shore algae, water, and rhodmaine tracer dye introduced into the pond to simulate water contamination by a localized source. Abundance maps generated using the GSM accurately track the evolution of the dye plume as it mixes into the surrounding water.}
 
 % In the event of purely linear mixing, non-linear contributions are naturally driven to zero. The GSM outperforms three varieties of non-negative matrix factorization for both endmember extraction accuracy and abundance estimation on a synthetic data set of linearly mixed spectra from the USGS spectral library. In a second experiment, the GSM is applied to real hyperspectral imagery captured over a pond in North Texas. The model is able to accurately identify spectral signatures corresponding to near-shore algae, water, and rhodmaine tracer dye introduced into the pond to simulate water contamination by a localized source. Abundance maps generated using the GSM accurately track evolution of the dye plume as it mixes into the surrounding water.}
 
@@ -159,11 +159,11 @@ The remainder of the paper is structured as follows. Section~\ref{sec:gsm} descr
 
 \section{Generative Simplex Mapping}\label{sec:gsm}
 
-In the original GTM formulation, the data vectors $\mathbf{x}$ (reflectance spectra of length $D$) are described by latent variables $\mathbf{z}$ mapped into the data space by a non-linear function $\psi$. The data space distribution is taken to be normal with the precision parameter $\beta$ to account for measurement noise and spectral variability. The GSM uses same structure, that is
+In the original GTM formulation, the data vectors $\mathbf{x}$ (reflectance spectra of length $D$) are described by latent variables $\mathbf{z}$ mapped into the data space by a non-linear function $\psi$. The data space distribution is taken to be normal with a precision parameter $\beta$ to account for measurement noise and spectral variability. The GSM uses same structure, that is
 \begin{equation}\label{eqn:data-space-distribution}
     p(\mathbf{x} \mid \mathbf{z}, \mathbf{W}, \beta) = \left(\frac{\beta}{2\pi} \right)^{D/2}\exp\left( -\frac{\beta}{2}\lVert \psi(\mathbf{z}; \mathbf{W}) - \mathbf{x} \rVert^2 \right)
 \end{equation}
-where $\mathbf{z}=(z_1, z_2, ..., z_{N_v})$ corresponding to $N_v$-many sources and $\mathbf{W}$ is a $D \times M$ matrix of model weights which parameterize the mapping $\psi$.
+where $\mathbf{z}=(z_1, z_2, ..., z_{N_v})$ corresponding to $N_v$-many sources and $\mathbf{W}$ is a $D \times M$ matrix of model weights which parameterize the mapping $\psi$. As Equation~\ref{eqn:data-space-distribution} indicates, the precision parameter corresponds to a standard deviation of $\sqrt{\beta^{-1}}$.
 
 Assuming data are uniformly sampled from an embedded manifold in the data space, the GTM models the latent space using a rectangular grid with $K$-many nodes of equal prior probability. To adapt the GTM to describe endmember mixing, the GSM makes two key changes. The first is to replace the rectangular GTM grid with a gridded simplex with $N_v$ vertices. Barycentric coordinates for each node then describe the relative abundance of each endmember with siplex vertices corresponding to pure sources. The second change is to augment the equal prior probabilities of the GTM latent space with adaptive mixing coefficients $\pi_k$ to allow for nonuniform sampling across the abundance simplex. This addition allows the GSM to flexibly address many possible mixing scenarios without an \textit{a priori} assumption for a specific mixing distribution. Together, these changes result in a prior distribution for the latent space given by
 \begin{equation}\label{eqn:latent-distribution}
@@ -251,7 +251,7 @@ Optimizing Eq~\ref{eq:complete-data-llh} with respect to $\beta$ yields the fina
     \frac{1}{\beta^{\text{new}}}  = \frac{1}{ND}\sum\limits_n^N\sum\limits_k^K R_{kn}\lVert \psi(\mathbf{z}_k; \mathbf{W}) - \mathbf{x}_n \rVert^2.
 \end{equation}
 
-To train a GSM model, weights $\mathbf{W}$ are randomly initialized to positive values. The mixing coefficients are initially set to $\pi_k = 1/K$. Finally, the precision parameter $\beta$ is initialized to the variance of the $(N_v+1)$-th principal component. After initialization, the expectation and maximization steps are repeated in turn until $Q$ converges to a predetermined tolerance level. For large $N_v$ we note that generating a regular grid within the simplex becomes cumbersome as the number of grid nodes scales as ${k + N_v - 2 \choose N_v - 1}$ for $k$ nodes per edge. An alternative approach is to randomly sample points within the simplex to obtain a total of $K$ nodes. A Dirichlet distribution 
+To train a GSM model, weights $\mathbf{W}$ are randomly initialized to positive values. The mixing coefficients are initially set to $\pi_k = 1/K$. Finally, the precision parameter $\beta$ is initialized to the variance of the $(N_v+1)$-th principal component. The matrix $\mathbf{\Phi}$ is pre-computed and stored for reuse during each EM cycle together with the data matrix $\mathbf{X}$. After initialization, the expectation and maximization steps are repeated in turn until $Q$ converges to a predetermined tolerance level. For large $N_v$ we note that generating a regular grid within the simplex becomes cumbersome as the number of grid nodes scales as ${k + N_v - 2 \choose N_v - 1}$ for $k$ nodes per edge leading to a large responsibility matrix. An alternative approach is to randomly sample points within the simplex to obtain a total of $K$ nodes. A Dirichlet distribution 
 \begin{equation}
     p(\mathbf{z}) = \frac{\Gamma(\sum_i^{N_v}\alpha_i)}{\prod_{i}^{N_v}\Gamma(\alpha_i)} \prod_{i}^{N_v} [\mathbf{z}]_i^{\alpha_i-1}
 \end{equation}
@@ -278,7 +278,7 @@ A freely available implementation of the GSM is provided at \cite{gtm-code}. The
 
 \subsection{Linear Mixing: Comparison to NMF}
 
-To illustrate the effectiveness of the GSM, we first demonstrate its ability to model linear mixing. This serves as an important limiting case since linearly mixed spectra should not lead to the spurous introduction of non-linear contributions by the GSM. The goal of this first test is therefore to demonstrate that the GSM drives non-linear weights to zero for linearly mixed data while providing a fair test to compare GSM to well-established linear mixing models. To this end, a synthetic data set comprising linear mixtures of three sample spectra from the U.S. Geological Survey digital spectral library was generated by sampling $1000$ abundance vectors from a Dirichlet distribution with $\alpha_1=\alpha_2=\alpha_3=1/3$ \cite{usgs-spectra}. These source spectra and abundances are visualized in Figure~\ref{fig:usgs-data}.
+To illustrate the effectiveness of the GSM, we first demonstrate its ability to model linear mixing. This serves as an important limiting case since linearly mixed spectra should not lead to the spurous introduction of non-linear contributions by the GSM. The goal of this first test is therefore to demonstrate that the GSM drives non-linear weights to zero for linearly mixed data while providing a fair test to compare the GSM to a well-established linear mixing model. This ability clealy distinguishes the GSM from other non-nonlinear unmixing approaches such as autoencoders, which by their design, include non-linear mixing even when it is not present in the underlying data. To this end, a synthetic data set comprising linear mixtures of three sample spectra from the U.S. Geological Survey digital spectral library was generated by sampling $1000$ abundance vectors from a Dirichlet distribution with $\alpha_1=\alpha_2=\alpha_3=1/3$ \cite{usgs-spectra}. These source spectra and abundances are visualized in Figure~\ref{fig:usgs-data}.
 
 \begin{figure}[H]
 \includegraphics[width=\columnwidth]{methods/usgs/usgs-dataset.pdf}
@@ -302,9 +302,9 @@ Abundance estimation was similarly evaluated using the Mean RMSE between true ab
 
 \subsection{Non-linear Mixing: Water Contaminant Identification}
 
-To assess the ability of the GSM to unmix realistic scenes likely to involve non-linear mixing effects, we consider a data set of real HSI collected in Montague, North Texas on 9 December 2020. A Freefly Alta-X autonomous quadcopter was used as a UAV platform and equipped with a Resonon Pika XC2 visible+near-infrared (VNIR) hyperspectral imager to acquire multiple HSI. Each HSI pixel included 462 wavelength bins ranging from $391$ to $1011$ nm. To evaluate the ability of GSM to identify potential contaminant sources, rhodamine dye, a commonly used tracer in hydrological studies, was released into a pond. Two UAV flights spaced 15 minutes apart were used to capture the evolution of the plume as it dispersed into the surrounding water.
+To assess the ability of the GSM to unmix realistic scenes likely to involve non-linear mixing effects, we consider a data set of real HSI collected in Montague, North Texas on 9 December 2020. A Freefly Alta-X autonomous quadcopter was used as a UAV platform and equipped with a Resonon Pika XC2 visible+near-infrared (VNIR) hyperspectral imager to acquire multiple HSI. Each HSI pixel included 462 wavelength bins ranging from $391$ to $1011$ nm. To evaluate the ability of GSM to identify potential contaminant sources, rhodamine dye, a commonly used tracer in hydrological studies, was released into the pond. Two UAV flights spaced 15 minutes apart were used to capture the evolution of the plume as it dispersed into the surrounding water.
 
-The hyperspectral imager is in a pushbroom configuration so that HSI was captured one scan line at a time. Data from an embedded GPS/INS unit enable direct georectification of captured imagery using the method described in \cite{muller2002program}. Additionally, an upward-facing Ocean Optics UV-Vis NIR spectrometer with a cosine corrector was included on the top of the UAV to measure incident solar irradiance. The configuration of the UAV together with a sample HSI are shown in Figure~\ref{fig:robotteam-data}. For a more detailed description of the system, the reader is directed to ref. \cite{robot-team-1, robot-team-2}.
+The hyperspectral imager is in a pushbroom configuration so that each HSI was captured one scan line at a time. Data from an embedded GPS/INS unit enable direct georectification of captured imagery using the method described in \cite{muller2002program}. Additionally, an upward-facing Ocean Optics UV-Vis NIR spectrometer with a cosine corrector was included on the top of the UAV to measure incident solar irradiance. The configuration of the UAV together with a sample HSI are shown in Figure~\ref{fig:robotteam-data}. For a more detailed description of the system, the reader is directed to ref. \cite{robot-team-1, robot-team-2}.
 
 \begin{figure}[t]
 \includegraphics[width=\columnwidth]{methods/robot-team/robot-team-overview.pdf}
@@ -357,7 +357,7 @@ In Figure~\ref{fig:usgs-endmembers}, we plot the endmembers extracted for the GS
 \caption{Endmembers extracted by the GSM for the simulated linear mixing data set with SNR$=20$. The dashed lines correspond to original endmember spectra from the USGS spectral database. Solid lines superimposed on the plot indicate the extracted endmember spectra. Colored bands are included around each spectrum corresponding to the spectral variability estimated by the GSM precision parameter $\beta$ where the band width is $2\sqrt{\beta^{-1}}$ corresponding to $2$ standard deviations.}
 \label{fig:usgs-endmembers}
 \end{figure}  
-The extracted endmembers clearly fit the original source spectra while capturing local reflectance features. Furthermore, the GSM precision parameter $\beta$ which is tuned during model training, provides an assessment of spectral variability due to random noise. In Figure~\ref{fig:usgs-endmembers} this is indicated by the colored band centered around each extracted spectrum with a width of $2\sqrt{\beta^{-1}}$ corresponding to 2 standard deviations. The SNR of $20$ added to this example corresponds to zero-mean Gaussian noise with a standard deviation of $\sigma=0.0493$. After training, the GSM found $\sqrt{\beta^{-1}}=0.0495$ that accurately captures the introduced noise. This ability to assess the spectral variability of extracted endmembers is a key advantage of the GSM.
+The extracted endmembers clearly fit the original source spectra while capturing local reflectance features. Furthermore, the GSM precision parameter $\beta$ which is tuned during model training, provides an assessment of spectral variability due to random noise. In Figure~\ref{fig:usgs-endmembers} this is indicated by the colored band centered around each extracted spectrum with a width of $2\sqrt{\beta^{-1}}$ corresponding to 2 standard deviations. The SNR of $20$ added to this example corresponds to zero-mean Gaussian noise with a standard deviation of $\sigma=0.0493$. After training, the GSM found $\sqrt{\beta^{-1}}=0.0495$, accurately identifying this introduced noise. The ability to assess the spectral variability of extracted endmembers is a key advantage of the GSM resulting from its probabilistic formulation.
 
 \subsection{Non-linear Mixing: Rhodamine Dye Plume}
 
@@ -428,7 +428,7 @@ The proliferation of hyperspectral imaging technologies in the remote sensing an
 
 The growing popularity of deep learning methods has led many to explore applications of deep learning to the spectral unmixing problem. Variations in auto-encoder architectures are a popular choice for both endmember extraction and unmixing. For example, Borsoi et al. used a variational autoencoder to more accurately identify the spectral variability in a LMM \cite{borsoi2019deep}. Similarly, Palson et al. introduced an autoencoder with convolution layers to extend the LMM by incorporating spatial context from neighboring HSI pixels \cite{palsson2020convolutional}. However, the increased complexity of deep neural network approaches makes interpreting the latent space learned by encoder layers challenging and can dramatically increase training time and data volume requirements. In contrast, the latent space of the GSM is immediately interpretable due to the imposed simplex geometry, while the form of $\psi$ leaves room to explore a variety of non-linear mixing models. In this paper, $\psi$ was constructed to add non-linear effects as additions or perturbations to an underlying linear mixing model with the $\lambda_w$ hyperparameter provided to control the degree of non-linearity considered. In the original GTM formulation that inspired the GSM, the mapping $\psi$ strictly uses non-linear features generated by Gaussian RBFs. Alternatively, one could easily construct $\psi$ for specific non-linear models such as bilinear mixing by introducing features which depend on higher-order combinations of the latent space (abundance) coordinates. However, it is important to note that the EM algorithm formulated for GSM training is made possible due to the linear combination of activations $\phi(z)$ with model weights $\mathbf{W}$. For mixing models which instead depend non-linearly on weights $\mathbf{W}$, an EM algorithm may require iterative non-linear solves during each M step.
 
-The main limitation of the GSM is the curse of dimensionality encountered when generating a grid on the $(N_v-1)$-simplex for large numbers of endmembers, $N_v$. This can be mitigated by instead randomly sampling points within the interior of the simplex using a uniform Dirichlet distribution to obtain a pre-determined number of nodes across the latent space. As the mixing coefficients $\pi_k$ are adapted during training, the variability in the spacing of the internodes should not significantly affect the performance of the model. In fact, this was confirmed for the simulated data set as summarized in Figure~\ref{fig:usgs-fits}. For considerably large data sets, the size of the responsibility matrix $\mathbf{R}$ can also lead to extended training times. This can be addressed by augmenting the EM procedure to updated using mini-batches of training samples during each E-step as described by Bishop et al. for the GTM in ref. \cite{gtm-developments}. Rather than updating the full responsibility matrix, a subset of $\mathbf{R}$ corresponding to a single batch of training data can be evaluated with all other entries kept constant. The GSM may also be extended in other ways, for example, by replacing the precision parameter $\beta$ with a covariance matrix to model wavelength-dependent spectral variability common to many hyperspectral imaging platforms. 
+The main limitation of the GSM is the curse of dimensionality encountered when generating a grid on the $(N_v-1)$-simplex for large numbers of endmembers, $N_v$. This can be mitigated by instead randomly sampling points within the interior of the simplex using a uniform Dirichlet distribution to obtain a pre-determined number of nodes across the latent space. As the mixing coefficients $\pi_k$ are adapted during training, variability in spacing between nodes should not significantly affect the performance of the model. This was confirmed for the simulated data set as shown in Figure~\ref{fig:usgs-fits}. In terms of computational efficiency, each expectation step involves $\mathcal{O}(K \times N)$ operations to update the entries of the responsibility matrix leading to extended training times for considerably large data sets. This can be addressed by augmenting the EM procedure to use mini-batches of training samples as outlined by Bishop et al. for the GTM in ref. \cite{gtm-developments}. Rather than updating the full responsibility matrix during each iteration, a subset of $\mathbf{R}$ corresponding to a single batch of training data can be evaluated with all other entries kept constant. The GSM may also be extended in other ways, for example, by replacing the precision parameter $\beta$ with a vector $\beta_{\labmda}$ of parameters to model wavelength-dependent spectral variability common to many hyperspectral imaging platforms. 
 
 Based on the results of applying the GSM to real HSI as illustrated in Figure~\ref{fig:endmember-abundance-dist} and Figure~\ref{fig:plume-evo}, one clear application of the GSM is to contaminant identification and water quality assessment. Modern UAV platforms make it possible to rapidly image bodies of water where direct access for in-situ data collection is restricted. By equipping UAVs with hyperspectral imagers, the GSM can be used to identify abnormal spectral signatures corresponding to localized contaminant sources. Generating semantic segmentations of collected HSI as in panel b of Figure~\ref{fig:robot-team-endmembers} makes it easy to compare multiple HSI without resorting to pseudocolor images generated from a limited number of wavelength bands. Since the GSM models the distribution of all HSI spectra rather than individual parameters, it may also aid in-situ data collection by suggesting sampling points which maximize the area traversed in the GSM latent space rather than uniformly sampling across a wide spatial extent. Similar approaches have been developed to guide autonomous data collection vehicles by casting route planning as a prize collecting travelling salesman problem subject to resource constraints \cite{balas2007prize, suryan2020learning}.
 
